perfect login page

--- a/MASUK/login.html
+++ b/MASUK/login.html
@@ -56,7 +56,9 @@
         </div>
         <div class="forgot">
           <a>Lupa password?</a>
-          <a href="https://shopee.co.id/product/259907194/12264310146?uls_trackid=50n8vvep001r&utm_campaign=id_mAMzoB6XuD&utm_content=----&utm_medium=affiliates&utm_source=an_11320950667&utm_term=bqpnyegw1f6w">click here</a>
+          <a class="lupa-password" href="https://shopee.co.id/product/259907194/12264310146?uls_trackid=50n8vvep001r&utm_campaign=id_mAMzoB6XuD&utm_content=----&utm_medium=affiliates&utm_source=an_11320950667&utm_term=bqpnyegw1f6w"
+            >Tekan di sini</a
+          >
         </div>
         <div class="daftar">
           <a>Belum punya akun?</a>
